fixed container spacing

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -13,7 +13,7 @@
 
 .grid-container {
     display: flex;
-    margin: 0 20px;
+    margin: 0 2vw;
     justify-content: space-around;
     width: 100vw;
 }
